# WindowsTopBar

./: .gitignore  Cargo.toml  LICENSE  README.md  SEARCH_FIX.md  SEARCH_IMPROVEMENTS.md  build.rs  build_installer.bat  todo.txt
.github/workflows/: auto-release.yml  ci.yml  release.yml
resources/: topbar.manifest  topbar.rc
src/: app.rs  config.rs  effects.rs  error.rs  hotkey.rs  main.rs  quicklook.rs  search.rs  theme.rs  tray.rs  utils.rs  window.rs
src/modules/: active_window.rs  app_menu.rs  battery.rs  bluetooth.rs  clipboard.rs  clock.rs  disk.rs  gpu.rs  keyboard_layout.rs  media.rs  mod.rs  network.rs  night_light.rs  system_info.rs  uptime.rs  volume.rs  weather.rs
src/render/: context.rs  drawing.rs  dropdown.rs  icons.rs  mod.rs  modules.rs  quick_search.rs  renderer.rs
src/window/: config_handlers.rs  manager.rs  menus.rs  mod.rs  module_handlers.rs  proc.rs  renderer.rs  state.rs
wix/: License.rtf  main.wxs
