[package]
name = "topbar"
version = "0.1.0"
edition = "2021"
authors = ["TopBar Team"]
description = "A native Windows 11 topbar application inspired by macOS"
license = "MIT"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
]}

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = "0.4"

# System information
sysinfo = "0.31"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Image handling for icons
image = "0.25"

# Font rendering
fontdue = "0.9"

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4"] }

# Directories for config paths
dirs = "5.0"

# Once cell for lazy static
once_cell = "1.19"

# Parking lot for better mutexes
parking_lot = "0.12"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "topbar"
path = "src/main.rs"
