[package]
name = "topbar"
version = "0.1.0"
edition = "2021"
authors = ["TopBar Team"]
description = "A native Windows 11 topbar application inspired by macOS"
license = "MIT"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Performance",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Bluetooth",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
]}

# Clipboard handling
arboard = "2"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# System information
sysinfo = { version = "0.31", default-features = false, features = ["system", "disk"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Directories for config paths
dirs = "5.0"

# Once cell for lazy static
once_cell = "1.19"

# Parking lot for better mutexes
parking_lot = "0.12"

# HTTP client for weather
ureq = { version = "2.9", features = ["json"] }

# Fast finite state transducer for prefix search and filesystem walker
fst = "0.4"
walkdir = "2"
notify = "6"
glob = "0.3"

# (Optional) ignore patterns support can be added later with `ignore` crate
# ignore = "0.4"

# Image decoding for QuickLook previews
image = "0.24"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"      # Optimize for size instead of speed
lto = true
codegen-units = 1
strip = true
panic = "abort"      # Smaller panic handling

[[bin]]
name = "topbar"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
